--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -20,6 +20,11 @@
     text-align: center;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
     background: #4393B9;
+    background: url("/assets/images/main_bg.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;     
 }
 
 .footer {
@@ -31,4 +36,10 @@
 
 .navbar-text {
     margin-left: 15px;
+}
+
+.centered {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
