--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -27,6 +27,14 @@
     background-size: cover;     
 }
 
+.input-group.full-width {
+    width: 100% !important;
+}
+
+.input-group.full-width input {
+  border-radius:4px !important;
+}
+
 .footer {
     text-align: center;
     padding: 30px 0;
