--- a/client/app/app.css
+++ b/client/app/app.css
@@ -37,3 +37,12 @@
     color: #000;
     padding: 0.2em 0;
 }
+
+/* Bootstrap uses too much space by default */
+.page-header {
+    margin: 0px;
+}
+
+.container > h1 {
+    text-shadow: 1px 1px 2px black;
+}
