--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -20,7 +20,7 @@
     text-align: center;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
     background: #4393B9;
-    background: url("/assets/images/main_bg.jpg") no-repeat center center fixed;
+    background: url("/assets/images/main_bg.jpg") no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
