--- a/client/app/verses/verses.css
+++ b/client/app/verses/verses.css
@@ -13,20 +13,6 @@
     letter-spacing: -1px;
 }
 
-.hero-unit {
-    position: relative;
-    padding: 30px 15px;
-    color: #F5F5F5;
-    text-align: center;
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-    background: #4393B9;
-    background: url("/assets/images/main_bg.jpg") no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;     
-}
-
 .footer {
     text-align: center;
     padding: 30px 0;
@@ -53,4 +39,17 @@ p span.verseno {
 .right-align {
     text-align: right;
     margin: 15px 0px;
+}
+
+.save_msg
+{
+    font-size: 1.2em !important;
+    font-weight: bold  !important;
+    padding: 20px  !important;
+    color: #999 !important;
+    vertical-align: middle;
+}
+
+.save_msg span{
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
