Bug fix Sunday AM 2

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -12,7 +12,7 @@
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
         <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
-            <a ng-href="{{item.link}}">{{item.title}}</a>
+            <a ng-href="{{item.link}}" ng-show="!isLoggedIn()">{{item.title}}</a>
         </li>
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
         <li ng-show="isLoggedIn()" ng-class="{active: isActive('/verses')}"><a href="/verses">Choose Passages</a></li>
