--- a/client/app/verses/verses.css
+++ b/client/app/verses/verses.css
@@ -57,3 +57,7 @@ p span.verseno {
 .save_msg span{
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
+
+.btn-toolbar > .btn, .btn-toolbar > .btn-group, .btn-toolbar > .input-group {
+    margin: 0px 5px 5px 5px;
+}
