--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -11,19 +11,19 @@
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
-        <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
+        <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}" ng-click="activeClick(item.link);">
             <a ng-href="{{item.link}}" ng-show="!isLoggedIn()">{{item.title}}</a>
         </li>
-        <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
-        <li ng-show="isLoggedIn()" ng-class="{active: isActive('/verses')}"><a href="/verses">Choose Passages</a></li>
+        <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}" ng-click="activeClick('/admin');"><a href="/admin">Admin</a></li>
+        <li ng-show="isLoggedIn()" ng-class="{active: isActive('/verses')}" ng-click="activeClick('/verses');"><a href="/verses">Choose Passages</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/signup')}"><a href="/signup">Church Signup</a></li>
-        <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}"><a href="/login">Login</a></li>
+        <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/signup')}" ng-click="activeClick('/signup');"><a href="/signup">Church Signup</a></li>
+        <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}" ng-click="activeClick('/login');"><a href="/login">Login</a></li>
         <li ng-show="isLoggedIn()"><p class="navbar-text">Church: '{{ getCurrentUser().church_name }}'</p> </li>
-        <li ng-show="isLoggedIn()" ng-class="{active: isActive('/settings')}"><a href="/settings"><span class="glyphicon glyphicon-cog"></span></a></li>
-        <li ng-show="isLoggedIn()" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout()">Logout</a></li>
+        <li ng-show="isLoggedIn()" ng-class="{active: isActive('/settings')}" ng-click="activeClick('/settings');"><a href="/settings"><span class="glyphicon glyphicon-cog"></span></a></li>
+        <li ng-show="isLoggedIn()" ng-class="{active: isActive('/logout')}" ng-click="activeClick('/logout');"><a href="" ng-click="logout()">Logout</a></li>
       </ul>
     </div>
   </div>
