--- a/client/app/app.css
+++ b/client/app/app.css
@@ -57,6 +57,11 @@ p:-moz-dir(rtl) {
     display: none;
 }
 
+.navbar-default {
+    background-color: #fff;
+    border-color: #e7e7e7;
+}
+
 @media (max-width: 768px) {
     .row {
         margin: 10px 0px;
@@ -89,6 +94,7 @@ p:-moz-dir(rtl) {
     .sideslide.showme {
         left: 15px !important;
         transition: all 0.4s ease 0s;
+        box-shadow: 0px 5px 8px 0px rgba(99, 99, 99, 0.5);
     }
 
     .navbar-default .navbar-nav > li > a {
@@ -116,5 +122,12 @@ p:-moz-dir(rtl) {
         position: absolute;
         margin: 5px 0px 10px;
         bottom: 40px;
+    }
+
+    .navbar-static-top {
+        position: fixed;
+        width: 100%;
+        height: 52px;
+        top: 0px;
     }
 }
