--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand"><img src="/assets/images/BIYBL-Logo.png"/></a>
+      <a href="/" class="navbar-brand"><img ng-src="{{cobrand.logo}}"/></a>
     </div>
     <div class="navbar-collapse sideslide" ng-class="{ showme: !isCollapsed }" id="navbar-main">
       <ul class="nav navbar-nav">
